// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ChatPage > Snapshots > matches snapshot - default state with rooms 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container chat-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        />
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="chat-notification-banner"
      >
        <div
          class="chat-notification-icon"
        >
          <i
            class="fas fa-bell"
          />
        </div>
        <div
          class="chat-notification-content"
        >
          <p
            class="chat-notification-title"
          >
            Enable notifications for new messages
          </p>
          <p
            class="chat-notification-desc"
          >
            Get notified when you receive new messages while away
          </p>
        </div>
        <div
          class="chat-notification-actions"
        >
          <button
            class="chat-notification-btn enable"
            type="button"
          >
            Enable
          </button>
          <button
            aria-label="Dismiss"
            class="chat-notification-btn dismiss"
            type="button"
          >
            <i
              class="fas fa-times"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-80 lg:w-88 xl:w-96 chat-sidebar-enhanced overflow-hidden flex-shrink-0 flex flex-col"
      >
        <div
          class="chat-sidebar-header"
        >
          <div
            class="flex items-center justify-between mb-3"
          >
            <h2
              class="chat-sidebar-title"
            >
              <i
                class="fas fa-inbox mr-2 text-purple-500"
              />
              chat.conversations
            </h2>
            <span
              class="chat-sidebar-count"
            >
              1
            </span>
          </div>
          <div
            class="chat-sidebar-search"
          >
            <i
              class="fas fa-search chat-sidebar-search-icon"
            />
            <input
              aria-label="Search conversations"
              class="chat-sidebar-search-input"
              placeholder="chat.searchConversations"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="chat-sidebar-rooms"
        >
          <div
            class="chat-room-list"
          >
            <button
              class="chat-room-card "
              type="button"
            >
              <div
                class="chat-room-card-avatar"
              >
                <div
                  class="relative "
                >
                  <div
                    class="w-10 h-10 text-sm rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
                  >
                    O
                  </div>
                  <span
                    class="absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white dark:border-gray-800"
                    title="online"
                  />
                </div>
              </div>
              <div
                class="chat-room-card-content"
              >
                <div
                  class="chat-room-card-header"
                >
                  <span
                    class="chat-room-card-name"
                  >
                    otheruser
                  </span>
                  <span
                    class="chat-room-card-time"
                  >
                    1/15/2024
                  </span>
                </div>
                <div
                  class="chat-room-card-body"
                >
                  <p
                    class="chat-room-card-preview"
                  >
                    <span
                      class="chat-room-card-sender"
                    >
                      otheruser
                      :
                    </span>
                     
                    Hello there!
                  </p>
                  <span
                    class="chat-room-card-badge"
                  >
                    2
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col chat-main overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="chat-empty-state"
        >
          <div
            class="chat-empty-icon"
          >
            <i
              class="fas fa-comment-dots"
            />
          </div>
          <p
            class="chat-empty-title"
          >
            Select a chat to start messaging
          </p>
          <p
            class="chat-empty-subtitle"
          >
            Select a conversation from the list or start a new chat
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - disconnected state 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container chat-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="modern-stat-badge"
            style="background: rgba(239, 68, 68, 0.1); border-color: rgba(239, 68, 68, 0.2);"
          >
            <i
              class="fas fa-exclamation-triangle text-red-500 mr-2"
            />
            <span
              class="hidden sm:inline"
            >
              Disconnected
            </span>
            <span
              class="sm:hidden"
            >
              Offline
            </span>
          </div>
        </div>
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="chat-notification-banner"
      >
        <div
          class="chat-notification-icon"
        >
          <i
            class="fas fa-bell"
          />
        </div>
        <div
          class="chat-notification-content"
        >
          <p
            class="chat-notification-title"
          >
            Enable notifications for new messages
          </p>
          <p
            class="chat-notification-desc"
          >
            Get notified when you receive new messages while away
          </p>
        </div>
        <div
          class="chat-notification-actions"
        >
          <button
            class="chat-notification-btn enable"
            type="button"
          >
            Enable
          </button>
          <button
            aria-label="Dismiss"
            class="chat-notification-btn dismiss"
            type="button"
          >
            <i
              class="fas fa-times"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-80 lg:w-88 xl:w-96 chat-sidebar-enhanced overflow-hidden flex-shrink-0 flex flex-col"
      >
        <div
          class="chat-sidebar-header"
        >
          <div
            class="flex items-center justify-between mb-3"
          >
            <h2
              class="chat-sidebar-title"
            >
              <i
                class="fas fa-inbox mr-2 text-purple-500"
              />
              chat.conversations
            </h2>
            <span
              class="chat-sidebar-count"
            >
              1
            </span>
          </div>
          <div
            class="chat-sidebar-search"
          >
            <i
              class="fas fa-search chat-sidebar-search-icon"
            />
            <input
              aria-label="Search conversations"
              class="chat-sidebar-search-input"
              placeholder="chat.searchConversations"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="chat-sidebar-rooms"
        >
          <div
            class="chat-room-list"
          >
            <button
              class="chat-room-card "
              type="button"
            >
              <div
                class="chat-room-card-avatar"
              >
                <div
                  class="relative "
                >
                  <div
                    class="w-10 h-10 text-sm rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
                  >
                    O
                  </div>
                  <span
                    class="absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white dark:border-gray-800"
                    title="online"
                  />
                </div>
              </div>
              <div
                class="chat-room-card-content"
              >
                <div
                  class="chat-room-card-header"
                >
                  <span
                    class="chat-room-card-name"
                  >
                    otheruser
                  </span>
                  <span
                    class="chat-room-card-time"
                  >
                    1/15/2024
                  </span>
                </div>
                <div
                  class="chat-room-card-body"
                >
                  <p
                    class="chat-room-card-preview"
                  >
                    <span
                      class="chat-room-card-sender"
                    >
                      otheruser
                      :
                    </span>
                     
                    Hello there!
                  </p>
                  <span
                    class="chat-room-card-badge"
                  >
                    2
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col chat-main overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="chat-empty-state"
        >
          <div
            class="chat-empty-icon"
          >
            <i
              class="fas fa-comment-dots"
            />
          </div>
          <p
            class="chat-empty-title"
          >
            Select a chat to start messaging
          </p>
          <p
            class="chat-empty-subtitle"
          >
            Select a conversation from the list or start a new chat
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - empty state (no rooms) 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container chat-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        />
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="chat-notification-banner"
      >
        <div
          class="chat-notification-icon"
        >
          <i
            class="fas fa-bell"
          />
        </div>
        <div
          class="chat-notification-content"
        >
          <p
            class="chat-notification-title"
          >
            Enable notifications for new messages
          </p>
          <p
            class="chat-notification-desc"
          >
            Get notified when you receive new messages while away
          </p>
        </div>
        <div
          class="chat-notification-actions"
        >
          <button
            class="chat-notification-btn enable"
            type="button"
          >
            Enable
          </button>
          <button
            aria-label="Dismiss"
            class="chat-notification-btn dismiss"
            type="button"
          >
            <i
              class="fas fa-times"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-80 lg:w-88 xl:w-96 chat-sidebar-enhanced overflow-hidden flex-shrink-0 flex flex-col"
      >
        <div
          class="chat-sidebar-header"
        >
          <div
            class="flex items-center justify-between mb-3"
          >
            <h2
              class="chat-sidebar-title"
            >
              <i
                class="fas fa-inbox mr-2 text-purple-500"
              />
              chat.conversations
            </h2>
            <span
              class="chat-sidebar-count"
            >
              0
            </span>
          </div>
          <div
            class="chat-sidebar-search"
          >
            <i
              class="fas fa-search chat-sidebar-search-icon"
            />
            <input
              aria-label="Search conversations"
              class="chat-sidebar-search-input"
              placeholder="chat.searchConversations"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="chat-sidebar-rooms"
        >
          <div
            class="chat-sidebar-empty"
          >
            <div
              class="chat-sidebar-empty-icon"
            >
              <i
                class="fas fa-comments"
              />
            </div>
            <p
              class="chat-sidebar-empty-title"
            >
              No chats yet
            </p>
            <p
              class="chat-sidebar-empty-subtitle"
            >
              Start a new chat to begin
            </p>
            <button
              class="chat-sidebar-empty-btn"
              type="button"
            >
              <i
                class="fas fa-plus mr-2"
              />
              New Chat
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col chat-main overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="chat-empty-state"
        >
          <div
            class="chat-empty-icon"
          >
            <i
              class="fas fa-comment-dots"
            />
          </div>
          <p
            class="chat-empty-title"
          >
            Select a chat to start messaging
          </p>
          <p
            class="chat-empty-subtitle"
          >
            Select a conversation from the list or start a new chat
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - loading state 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container chat-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        />
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="chat-notification-banner"
      >
        <div
          class="chat-notification-icon"
        >
          <i
            class="fas fa-bell"
          />
        </div>
        <div
          class="chat-notification-content"
        >
          <p
            class="chat-notification-title"
          >
            Enable notifications for new messages
          </p>
          <p
            class="chat-notification-desc"
          >
            Get notified when you receive new messages while away
          </p>
        </div>
        <div
          class="chat-notification-actions"
        >
          <button
            class="chat-notification-btn enable"
            type="button"
          >
            Enable
          </button>
          <button
            aria-label="Dismiss"
            class="chat-notification-btn dismiss"
            type="button"
          >
            <i
              class="fas fa-times"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-80 lg:w-88 xl:w-96 chat-sidebar-enhanced overflow-hidden flex-shrink-0 flex flex-col"
      >
        <div
          class="chat-sidebar-header"
        >
          <div
            class="flex items-center justify-between mb-3"
          >
            <h2
              class="chat-sidebar-title"
            >
              <i
                class="fas fa-inbox mr-2 text-purple-500"
              />
              chat.conversations
            </h2>
            <span
              class="chat-sidebar-count"
            >
              0
            </span>
          </div>
          <div
            class="chat-sidebar-search"
          >
            <i
              class="fas fa-search chat-sidebar-search-icon"
            />
            <input
              aria-label="Search conversations"
              class="chat-sidebar-search-input"
              placeholder="chat.searchConversations"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="chat-sidebar-rooms"
        >
          <div
            class="chat-sidebar-loading"
          >
            <div
              class="chat-sidebar-loading-spinner"
            >
              <i
                class="fas fa-circle-notch fa-spin"
              />
            </div>
            <p>
              Loading chats...
            </p>
          </div>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col chat-main overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="chat-empty-state"
        >
          <div
            class="chat-empty-icon"
          >
            <i
              class="fas fa-comment-dots"
            />
          </div>
          <p
            class="chat-empty-title"
          >
            Select a chat to start messaging
          </p>
          <p
            class="chat-empty-subtitle"
          >
            Select a conversation from the list or start a new chat
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - with active chat room 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container chat-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        />
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="chat-notification-banner"
      >
        <div
          class="chat-notification-icon"
        >
          <i
            class="fas fa-bell"
          />
        </div>
        <div
          class="chat-notification-content"
        >
          <p
            class="chat-notification-title"
          >
            Enable notifications for new messages
          </p>
          <p
            class="chat-notification-desc"
          >
            Get notified when you receive new messages while away
          </p>
        </div>
        <div
          class="chat-notification-actions"
        >
          <button
            class="chat-notification-btn enable"
            type="button"
          >
            Enable
          </button>
          <button
            aria-label="Dismiss"
            class="chat-notification-btn dismiss"
            type="button"
          >
            <i
              class="fas fa-times"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-80 lg:w-88 xl:w-96 chat-sidebar-enhanced overflow-hidden flex-shrink-0 hidden md:flex md:flex-col"
      >
        <div
          class="chat-sidebar-header"
        >
          <div
            class="flex items-center justify-between mb-3"
          >
            <h2
              class="chat-sidebar-title"
            >
              <i
                class="fas fa-inbox mr-2 text-purple-500"
              />
              chat.conversations
            </h2>
            <span
              class="chat-sidebar-count"
            >
              1
            </span>
          </div>
          <div
            class="chat-sidebar-search"
          >
            <i
              class="fas fa-search chat-sidebar-search-icon"
            />
            <input
              aria-label="Search conversations"
              class="chat-sidebar-search-input"
              placeholder="chat.searchConversations"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="chat-sidebar-rooms"
        >
          <div
            class="chat-room-list"
          >
            <button
              class="chat-room-card active"
              type="button"
            >
              <div
                class="chat-room-card-avatar"
              >
                <div
                  class="relative "
                >
                  <div
                    class="w-10 h-10 text-sm rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
                  >
                    O
                  </div>
                  <span
                    class="absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white dark:border-gray-800"
                    title="online"
                  />
                </div>
              </div>
              <div
                class="chat-room-card-content"
              >
                <div
                  class="chat-room-card-header"
                >
                  <span
                    class="chat-room-card-name"
                  >
                    otheruser
                  </span>
                  <span
                    class="chat-room-card-time"
                  >
                    1/15/2024
                  </span>
                </div>
                <div
                  class="chat-room-card-body"
                >
                  <p
                    class="chat-room-card-preview"
                  >
                    <span
                      class="chat-room-card-sender"
                    >
                      otheruser
                      :
                    </span>
                     
                    Hello there!
                  </p>
                  <span
                    class="chat-room-card-badge"
                  >
                    2
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col chat-main overflow-hidden min-h-0 flex"
      >
        <div
          class="chat-header flex-shrink-0 safe-area-inset-top"
        >
          <div
            class="flex items-center gap-2 md:gap-3 mb-3"
          >
            <button
              aria-label="Back to chat list"
              class="md:hidden chat-input-btn"
              title="Back"
              type="button"
            >
              <i
                class="fas fa-arrow-left text-lg"
              />
            </button>
            <div
              class="flex-1 min-w-0"
            >
              <h2
                class="chat-header-title truncate"
              >
                Chat with otheruser
              </h2>
            </div>
            <button
              aria-label="Delete chat"
              class="chat-input-btn text-red-500 hover:text-red-600 hover:bg-red-50 dark:hover:bg-red-900/30"
              title="Delete chat"
              type="button"
            >
              <i
                class="fas fa-trash text-sm"
              />
            </button>
          </div>
          <div
            class="chat-search-container"
          >
            <i
              class="fas fa-search chat-search-icon"
            />
            <input
              aria-label="Search messages"
              class="chat-search-input"
              placeholder="Search messages..."
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="chat-messages flex-1 min-h-0 overscroll-contain"
        >
          <div
            class="chat-message group "
          >
            <div
              class="relative flex-shrink-0 hidden sm:block self-end mb-5"
            >
              <div
                class="w-8 h-8 text-xs rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
              >
                O
              </div>
            </div>
            <div
              class="chat-message-content"
            >
              <p
                class="chat-message-sender"
              >
                otheruser
              </p>
              <div
                class="relative"
              >
                <div
                  class="chat-bubble incoming"
                >
                  <p
                    class="chat-bubble-text"
                  >
                    Hello!
                  </p>
                </div>
              </div>
              <p
                class="chat-message-time"
              >
                1/15/2024
              </p>
            </div>
          </div>
          <div
            class="chat-message group outgoing"
          >
            <div
              class="chat-message-content"
            >
              <div
                class="relative"
              >
                <div
                  class="chat-bubble outgoing"
                >
                  <p
                    class="chat-bubble-text"
                  >
                    Hi there!
                  </p>
                </div>
                <button
                  aria-label="Delete message"
                  class="chat-message-delete"
                  title="Delete message"
                  type="button"
                >
                  <i
                    class="fas fa-trash text-xs"
                  />
                </button>
              </div>
              <p
                class="chat-message-time"
              >
                1/15/2024
                <i
                  class="chat-message-status fas fa-check"
                  title="Sent"
                />
              </p>
            </div>
          </div>
          <div
            class="h-1"
          />
        </div>
        <div
          class="chat-input-container flex-shrink-0 safe-area-inset-bottom"
        >
          <form
            class="chat-input-wrapper"
          >
            <input
              accept="image/*"
              class="hidden"
              tabindex="-1"
              type="file"
            />
            <button
              aria-label="Upload photo"
              class="chat-input-btn"
              title="Upload photo"
              type="button"
            >
              <i
                class="fas fa-image text-lg"
              />
            </button>
            <input
              aria-label="Message input"
              class="chat-text-input"
              placeholder="Type a message..."
              type="text"
              value=""
            />
            <button
              aria-label="Send"
              class="chat-input-btn send"
              disabled=""
              type="submit"
            >
              <i
                class="fas fa-paper-plane"
              />
            </button>
          </form>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatPage > Snapshots > matches snapshot - with error 1`] = `
<div>
  <div
    class="h-full flex flex-col overflow-hidden chat-page-container chat-container"
  >
    <div
      class="modern-page-header flex-shrink-0"
    >
      <div
        class="flex items-center gap-4 mb-2"
      >
        <div
          class="flex-1 min-w-0"
        >
          <div
            class="flex items-center gap-3 mb-1"
          >
            <div
              class="modern-icon-badge bg-gradient-to-br from-purple-500 to-indigo-600"
            >
              <i
                class="fas fa-comments text-white"
              />
            </div>
            <h1
              class="text-3xl sm:text-4xl font-bold text-[var(--text-primary)] truncate"
            >
              Chat
            </h1>
          </div>
        </div>
      </div>
      <div
        class="flex flex-col sm:flex-row sm:items-center sm:justify-between gap-3"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            class="modern-stat-badge"
            style="background: rgba(239, 68, 68, 0.1); border-color: rgba(239, 68, 68, 0.2);"
          >
            <i
              class="fas fa-exclamation-triangle text-red-500 mr-2"
            />
            <span
              class="hidden sm:inline"
            >
              Disconnected
            </span>
            <span
              class="sm:hidden"
            >
              Offline
            </span>
          </div>
        </div>
        <div
          class="flex flex-wrap items-center gap-2"
        >
          <button
            aria-label="New Chat"
            class="modern-btn-primary"
            type="button"
          >
            <i
              class="fas fa-plus mr-2"
            />
            <span>
              New Chat
            </span>
          </button>
        </div>
      </div>
      <div
        class="chat-notification-banner"
      >
        <div
          class="chat-notification-icon"
        >
          <i
            class="fas fa-bell"
          />
        </div>
        <div
          class="chat-notification-content"
        >
          <p
            class="chat-notification-title"
          >
            Enable notifications for new messages
          </p>
          <p
            class="chat-notification-desc"
          >
            Get notified when you receive new messages while away
          </p>
        </div>
        <div
          class="chat-notification-actions"
        >
          <button
            class="chat-notification-btn enable"
            type="button"
          >
            Enable
          </button>
          <button
            aria-label="Dismiss"
            class="chat-notification-btn dismiss"
            type="button"
          >
            <i
              class="fas fa-times"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex overflow-hidden min-h-0"
    >
      <div
        class="w-full md:w-80 lg:w-88 xl:w-96 chat-sidebar-enhanced overflow-hidden flex-shrink-0 flex flex-col"
      >
        <div
          class="chat-sidebar-header"
        >
          <div
            class="flex items-center justify-between mb-3"
          >
            <h2
              class="chat-sidebar-title"
            >
              <i
                class="fas fa-inbox mr-2 text-purple-500"
              />
              chat.conversations
            </h2>
            <span
              class="chat-sidebar-count"
            >
              1
            </span>
          </div>
          <div
            class="chat-sidebar-search"
          >
            <i
              class="fas fa-search chat-sidebar-search-icon"
            />
            <input
              aria-label="Search conversations"
              class="chat-sidebar-search-input"
              placeholder="chat.searchConversations"
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          class="chat-sidebar-rooms"
        >
          <div
            class="chat-room-list"
          >
            <button
              class="chat-room-card "
              type="button"
            >
              <div
                class="chat-room-card-avatar"
              >
                <div
                  class="relative "
                >
                  <div
                    class="w-10 h-10 text-sm rounded-full bg-gradient-to-br from-blue-500 to-purple-600 flex items-center justify-center text-white font-semibold"
                  >
                    O
                  </div>
                  <span
                    class="absolute bottom-0 right-0 w-2.5 h-2.5 bg-green-500 rounded-full border-2 border-white dark:border-gray-800"
                    title="online"
                  />
                </div>
              </div>
              <div
                class="chat-room-card-content"
              >
                <div
                  class="chat-room-card-header"
                >
                  <span
                    class="chat-room-card-name"
                  >
                    otheruser
                  </span>
                  <span
                    class="chat-room-card-time"
                  >
                    1/15/2024
                  </span>
                </div>
                <div
                  class="chat-room-card-body"
                >
                  <p
                    class="chat-room-card-preview"
                  >
                    <span
                      class="chat-room-card-sender"
                    >
                      otheruser
                      :
                    </span>
                     
                    Hello there!
                  </p>
                  <span
                    class="chat-room-card-badge"
                  >
                    2
                  </span>
                </div>
              </div>
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex-1 flex flex-col chat-main overflow-hidden min-h-0 hidden md:flex"
      >
        <div
          class="chat-empty-state"
        >
          <div
            class="chat-empty-icon"
          >
            <i
              class="fas fa-comment-dots"
            />
          </div>
          <p
            class="chat-empty-title"
          >
            Select a chat to start messaging
          </p>
          <p
            class="chat-empty-subtitle"
          >
            Select a conversation from the list or start a new chat
          </p>
        </div>
      </div>
    </div>
    <div
      class="btn-danger-glass fixed bottom-20 md:bottom-4 left-4 right-4 md:left-auto md:right-4 md:max-w-sm bg-red-600 text-white px-4 py-3 rounded-xl shadow-lg flex items-center gap-3 animate-slide-up z-50"
    >
      <div
        class="w-8 h-8 bg-white/20 rounded-full flex items-center justify-center flex-shrink-0"
      >
        <i
          class="fas fa-exclamation-circle"
        />
      </div>
      <p
        class="flex-1 text-sm"
      >
        Connection failed
      </p>
    </div>
  </div>
</div>
`;
